--- a/assets/www/index.html
+++ b/assets/www/index.html
@@ -5,6 +5,6 @@
   <script type="text/javascript" charset="utf-8" src="cordova-.js"></script>
  </head>
  <body>
-    <h1>Hello PhoneGap</h1>
+    <h1>Hello PhoneGap in git repo account</h1>
  </body>
 </html>
